[package]
name = "ghviz"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.4", features = ["derive"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
figlet-rs = "0.1.5"
